Fix padding when on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,7 @@ footer {
   color: #54494b !important;
   font-weight: 900 !important;
   letter-spacing: -5px !important;
-  font-size: 3rem !important;
+  font-size: 2.5rem !important;
 }
 
 .login-bttn {
@@ -100,7 +100,6 @@ footer {
   margin-top: 110px;
   height: auto;
   background-color: white;
-  padding: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
